# vb2glade

./: Makefile.am  README.md  YoshiNES-Progress  configure.ac
src/: GetValues.cpp  ReadMe.txt  getvalues.h  icstring.h  image.cpp  image.h  list.cpp  list.h  menu.cpp  output.cpp  output.h  stringfs.cpp  vb2glade.cpp
