# Copyright 2016 Declan Hoare
#
# This file is a part of vb2glade.
#
# vb2glade is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public
# License as published by the Free Software Foundation; either
# version 2 of the License, or (at your option) any later version.
#
# vb2glade is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with vb2glade; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.

AC_INIT([vb2glade], [1.0], [https://github.com/RogueAI42/vb2glade/issues], [vb2glade], [http://wingtk.sourceforge.net/])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([src/vb2glade.cpp])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([1.11 -Wall foreign])
AC_CONFIG_FILES([Makefile])
AC_PROG_CXX
AX_APPEND_COMPILE_FLAGS([-Wall -Wextra -Werror], [CXXFLAGS])
AC_OUTPUT
